made base for multitenancy - Part 1

--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,19 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=landlord
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=laravel_multi_tenancy
-DB_USERNAME=root
+DB_USERNAME=postgres
 DB_PASSWORD=
+
+DB_TENANT_CONNECTION=tenant
+DB_TENANT_HOST=127.0.0.1
+DB_TENANT_PORT=5432
+DB_TENANT_DATABASE=laravel_multi_tenancy
+DB_TENANT_USERNAME=postgres
+DB_TENANT_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
