--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/sanctum": "^4.0",
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-multitenancy": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -25,8 +27,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Factories\\": "database/landlord/factories/",
+            "Database\\Seeders\\": "database/landlord/seeders/"
         }
     },
     "autoload-dev": {
