--- a/package.json
+++ b/package.json
@@ -8,10 +8,20 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@types/jquery": "^3.5.33",
+        "@types/lodash": "^4.17.20",
+        "@types/node": "^24.3.0",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
+        "typescript": "^5.9.2",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "datatables.net": "^2.3.3",
+        "datatables.net-bs5": "^2.3.3",
+        "datatables.net-dt": "^2.3.3",
+        "lodash": "^4.17.21"
     }
 }
